# KFSFinder

./: .gitignore  CMakeLists.txt  DirOperator.cpp  DirOperator.hpp  DirOperatorStack.cpp  DirOperatorStack.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
src/: CMakeLists.txt  DirOperator.cpp  DirOperator.hpp  DirOperatorStack.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
